--- a/src/renderer/SettingsDeviceRenderer.mxml
+++ b/src/renderer/SettingsDeviceRenderer.mxml
@@ -11,10 +11,14 @@
 			
 			public var dev:Device;
 			public var arrayString:Array;
+			public var arrayStringDevTeam:Array;
 			
 			protected function settings_initializeHandler(event:FlexEvent):void {
 				
 				if(dev != null) {
+					if(dev.isSimulator) {
+						hGroupDevTeam.visible = false;
+					}
 					var file:File = File.userDirectory.resolvePath("actiontestscript/devicesPortsSettings.txt");
 					if(file.exists) {
 						var fileStream:FileStream = new FileStream();
@@ -31,12 +35,22 @@
 								}
 							}
 						}
+						fileStream.close();
+					}
+					
+					var fileDevTeam:File = File.userDirectory.resolvePath("actiontestscript/developmentDevTeam.txt");
+					if(fileDevTeam.exists) {
+						var fileStreamDevTeam:FileStream = new FileStream();
+						fileStreamDevTeam.open(fileDevTeam, FileMode.READ);
+						var contentDevTeam:String = fileStreamDevTeam.readUTFBytes(fileStreamDevTeam.bytesAvailable);
+						developmentTeamId.text = contentDevTeam;
+						fileStreamDevTeam.close();
 					}
 				}
 				portAutomatic.selected = portSelection.text == "";
 				portSelection.enabled = !portAutomatic.selected;
 			}
-
+			
 			private function closeHandler(event:CloseEvent):void{
 				PopUpManager.removePopUp(this);
 			}		
@@ -71,12 +85,20 @@
 					fileStream.writeUTFBytes(dev.id.toString().toLowerCase() + "==" + dev.automaticPort + ";" + dev.settingsPort + ";");
 					fileStream.close();
 				}
+				
+				if(dev != null && !dev.isSimulator) {
+					var fileDevTeam:File = File.userDirectory.resolvePath("actiontestscript/developmentDevTeam.txt");
+					var fileStreamDevTeam:FileStream = new FileStream();
+					fileStreamDevTeam.open(fileDevTeam, FileMode.WRITE);
+					fileStreamDevTeam.writeUTFBytes(developmentTeamId.text);
+					fileStreamDevTeam.close();
+				}
+				
 				if(hasToRestart) {
 					AtsMobileStation.devices.restartDev(dev);
 				}
 				PopUpManager.removePopUp(this);
-			}
-			
+			}			
 		]]>
 	</mx:Script>
 	
@@ -93,6 +115,13 @@
 				
 				<s:HGroup horizontalAlign="right">
 					<mx:CheckBox id="portAutomatic" label="Auto" change="portAutomatic_changeHandler(event)"/>
+				</s:HGroup>
+			</s:HGroup>
+			
+			<s:HGroup width="100%" paddingLeft="7" paddingRight="10" verticalCenter="0" verticalAlign="middle" gap="3" id="hGroupDevTeam">
+				<s:HGroup horizontalAlign="left">
+					<mx:Label fontSize="10" text="Development team ID"/>
+					<mx:TextInput id="developmentTeamId" width="100%" height="100%" maxChars="10"/>
 				</s:HGroup>
 			</s:HGroup>
 			
